exports[`<AppDetailBanner />  render tests matches snapshot when app is INSTALLED 1`] = `
<section
  className="app-summary">
  <div
    className="container">
    <div
      className="white-card">
      <div
        className="row">
        <div
          className="col-xs-12 col-sm-12 hidden-md hidden-lg">
          <div
            className="app-title">
            <h1>
              Vampire Finder 3000
            </h1>
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-xs-4 col-sm-3 col-md-3 col-lg-3 appicon-wrapper">
          <div
            className="app-icon">
            <img
              alt="Vampire Finder 3000"
              src={undefined} />
          </div>
          <div
            className="hidden-sm hidden-md hidden-lg">
            <div
              className="app-rating app-details">
              <div
                className="hidden-sm hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-sm" />
            </div>
          </div>
        </div>
        <div
          className="col-xs-8 col-sm-9 col-md-9 col-lg-9 appmeta-wrapper">
          <div
            className="app-meta row">
            <div
              className="col-xs-12 hidden-sm hidden-md hidden-lg">
              <div
                className="publisher app-details" />
              <div
                className="endorsed app-details">
                FirstNet Endorsed
              </div>
              <div
                className="app-details">
                <div
                  className="version">
                  <strong>
                    Version: 
                  </strong>
                  1.8.2
                </div>
                <div
                  className="updated">
                  <strong>
                    Released: 
                  </strong>
                  <br
                    className="hidden-xs hidden-md hidden-lg" />
                  July 14, 2017
                </div>
                <div
                  className="platform">
                  <strong>
                    Platform: 
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="hidden-xs hidden-md hidden-lg">
              <div
                className="col-sm-4">
                <div
                  className="publisher app-details" />
                <div
                  className="endorsed app-details">
                  FirstNet Endorsed
                </div>
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-sm-3">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-sm-5" />
            </div>
            <div
              className="hidden-xs hidden-sm">
              <div
                className="col-md-12">
                <div
                  className="app-title">
                  <h1>
                    Vampire Finder 3000
                  </h1>
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="publisher app-details" />
                <div
                  className="endorsed app-details">
                  FirstNet Endorsed
                </div>
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-md-4" />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row hidden-sm hidden-md hidden-lg">
        <div
          className="col-xs-offset-1 col-xs-10" />
      </div>
    </div>
  </div>
</section>
`;

exports[`<AppDetailBanner />  render tests matches snapshot when app is NOT_INSTALLED 1`] = `
<section
  className="app-summary">
  <div
    className="container">
    <div
      className="white-card">
      <div
        className="row">
        <div
          className="col-xs-12 col-sm-12 hidden-md hidden-lg">
          <div
            className="app-title">
            <h1>
              Vampire Finder 3000
            </h1>
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-xs-4 col-sm-3 col-md-3 col-lg-3 appicon-wrapper">
          <div
            className="app-icon">
            <img
              alt="Vampire Finder 3000"
              src={undefined} />
          </div>
          <div
            className="hidden-sm hidden-md hidden-lg">
            <div
              className="app-rating app-details">
              <div
                className="hidden-sm hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-sm" />
            </div>
          </div>
        </div>
        <div
          className="col-xs-8 col-sm-9 col-md-9 col-lg-9 appmeta-wrapper">
          <div
            className="app-meta row">
            <div
              className="col-xs-12 hidden-sm hidden-md hidden-lg">
              <div
                className="publisher app-details" />
              <div
                className="endorsed app-details">
                FirstNet Endorsed
              </div>
              <div
                className="app-details">
                <div
                  className="version">
                  <strong>
                    Version: 
                  </strong>
                  1.8.2
                </div>
                <div
                  className="updated">
                  <strong>
                    Released: 
                  </strong>
                  <br
                    className="hidden-xs hidden-md hidden-lg" />
                  July 14, 2017
                </div>
                <div
                  className="platform">
                  <strong>
                    Platform: 
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="hidden-xs hidden-md hidden-lg">
              <div
                className="col-sm-4">
                <div
                  className="publisher app-details" />
                <div
                  className="endorsed app-details">
                  FirstNet Endorsed
                </div>
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-sm-3">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-sm-5" />
            </div>
            <div
              className="hidden-xs hidden-sm">
              <div
                className="col-md-12">
                <div
                  className="app-title">
                  <h1>
                    Vampire Finder 3000
                  </h1>
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="publisher app-details" />
                <div
                  className="endorsed app-details">
                  FirstNet Endorsed
                </div>
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-md-4" />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row hidden-sm hidden-md hidden-lg">
        <div
          className="col-xs-offset-1 col-xs-10" />
      </div>
    </div>
  </div>
</section>
`;

exports[`<AppDetailBanner />  render tests matches snapshot when app is not ENDORSED 1`] = `
<section
  className="app-summary">
  <div
    className="container">
    <div
      className="white-card">
      <div
        className="row">
        <div
          className="col-xs-12 col-sm-12 hidden-md hidden-lg">
          <div
            className="app-title">
            <h1>
              Vampire Finder 3000
            </h1>
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-xs-4 col-sm-3 col-md-3 col-lg-3 appicon-wrapper">
          <div
            className="app-icon">
            <img
              alt="Vampire Finder 3000"
              src={undefined} />
          </div>
          <div
            className="hidden-sm hidden-md hidden-lg">
            <div
              className="app-rating app-details">
              <div
                className="hidden-sm hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-sm" />
            </div>
          </div>
        </div>
        <div
          className="col-xs-8 col-sm-9 col-md-9 col-lg-9 appmeta-wrapper">
          <div
            className="app-meta row">
            <div
              className="col-xs-12 hidden-sm hidden-md hidden-lg">
              <div
                className="publisher app-details" />
              <div
                className="app-details">
                <div
                  className="version">
                  <strong>
                    Version: 
                  </strong>
                  1.8.2
                </div>
                <div
                  className="updated">
                  <strong>
                    Released: 
                  </strong>
                  <br
                    className="hidden-xs hidden-md hidden-lg" />
                  July 14, 2017
                </div>
                <div
                  className="platform">
                  <strong>
                    Platform: 
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="hidden-xs hidden-md hidden-lg">
              <div
                className="col-sm-4">
                <div
                  className="publisher app-details" />
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-sm-3">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-sm-5" />
            </div>
            <div
              className="hidden-xs hidden-sm">
              <div
                className="col-md-12">
                <div
                  className="app-title">
                  <h1>
                    Vampire Finder 3000
                  </h1>
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="publisher app-details" />
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-md-4" />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row hidden-sm hidden-md hidden-lg">
        <div
          className="col-xs-offset-1 col-xs-10" />
      </div>
    </div>
  </div>
</section>
`;

exports[`<AppDetailBanner />  render tests matches snapshot when configuredMDMType is falsey 1`] = `
<section
  className="app-summary">
  <div
    className="container">
    <div
      className="white-card">
      <div
        className="row">
        <div
          className="col-xs-12 col-sm-12 hidden-md hidden-lg">
          <div
            className="app-title">
            <h1>
              Vampire Finder 3000
            </h1>
          </div>
        </div>
      </div>
      <div
        className="row">
        <div
          className="col-xs-4 col-sm-3 col-md-3 col-lg-3 appicon-wrapper">
          <div
            className="app-icon">
            <img
              alt="Vampire Finder 3000"
              src={undefined} />
          </div>
          <div
            className="hidden-sm hidden-md hidden-lg">
            <div
              className="app-rating app-details">
              <div
                className="hidden-sm hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-md hidden-lg" />
              <div
                className="hidden-xs hidden-sm" />
            </div>
          </div>
        </div>
        <div
          className="col-xs-8 col-sm-9 col-md-9 col-lg-9 appmeta-wrapper">
          <div
            className="app-meta row">
            <div
              className="col-xs-12 hidden-sm hidden-md hidden-lg">
              <div
                className="publisher app-details" />
              <div
                className="app-details">
                <div
                  className="version">
                  <strong>
                    Version: 
                  </strong>
                  1.8.2
                </div>
                <div
                  className="updated">
                  <strong>
                    Released: 
                  </strong>
                  <br
                    className="hidden-xs hidden-md hidden-lg" />
                  July 14, 2017
                </div>
                <div
                  className="platform">
                  <strong>
                    Platform: 
                  </strong>
                </div>
              </div>
            </div>
            <div
              className="hidden-xs hidden-md hidden-lg">
              <div
                className="col-sm-4">
                <div
                  className="publisher app-details" />
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-sm-3">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-sm-5" />
            </div>
            <div
              className="hidden-xs hidden-sm">
              <div
                className="col-md-12">
                <div
                  className="app-title">
                  <h1>
                    Vampire Finder 3000
                  </h1>
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="publisher app-details" />
                <div
                  className="app-rating app-details">
                  <div
                    className="hidden-sm hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-md hidden-lg" />
                  <div
                    className="hidden-xs hidden-sm" />
                </div>
              </div>
              <div
                className="col-md-4">
                <div
                  className="app-details">
                  <div
                    className="version">
                    <strong>
                      Version: 
                    </strong>
                    1.8.2
                  </div>
                  <div
                    className="updated">
                    <strong>
                      Released: 
                    </strong>
                    <br
                      className="hidden-xs hidden-md hidden-lg" />
                    July 14, 2017
                  </div>
                  <div
                    className="platform">
                    <strong>
                      Platform: 
                    </strong>
                  </div>
                </div>
              </div>
              <div
                className="col-md-4" />
            </div>
          </div>
        </div>
      </div>
      <div
        className="row hidden-sm hidden-md hidden-lg">
        <div
          className="col-xs-offset-1 col-xs-10" />
      </div>
    </div>
  </div>
</section>
`;
